--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "tough-cookie": "^4.1.3",
     "ts-jackett-api": "^1.0.0",
     "webtorrent": "^2.4.2",
-    "yts-api-node": "^1.1.3"
+    "yts-api-node": "^1.1.3",
+    "node-datachannel": "^0.9.1"
   },
   "pnpm": {
     "patchedDependencies": {
